--- a/app/src/main/res/layout/activity_marcas.xml
+++ b/app/src/main/res/layout/activity_marcas.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,31 +8,80 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@mipmap/fondoactividades"
-    tools:context=".vista.Marcas">
-    <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/main_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <SearchView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/searchMarca"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:background="#ffffff" />
+    tools:context=".vista.Marcas"
+    android:clickable="true">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|start"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/icono_compartir"
-        app:layout_anchor="@+id/contenedor_detalle_item"
-        app:layout_anchorGravity="top|end" />
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:weightSum="1"
+                    android:id="@+id/linearLayout"
+                    android:gravity="bottom"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true">
 
-    </android.support.design.widget.CoordinatorLayout>
+                        <LinearLayout
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:contentDescription="buscar"
+                            android:layout_marginTop="24px">
+
+                                <SearchView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/search"
+                                    android:layout_alignParentTop="true"
+                                    android:layout_alignParentLeft="true"
+                                    android:layout_alignParentStart="true"
+                                    android:layout_alignParentRight="true"
+                                    android:layout_alignParentEnd="true"
+                                    android:icon="@android:drawable/ic_menu_search"
+                                    android:labelFor="@string/app_name"
+                                    android:background="@drawable/background"
+                                    android:clickable="true"
+                                    android:gravity="top" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="24px">
+
+                                <Button
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Nueva Marca"
+                                    android:id="@+id/buttonNuevo"
+                                    android:layout_gravity="right"
+                                    android:background="@drawable/bk_boton_plano"
+                                    />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="357dp"
+                            android:layout_marginTop="24px"
+                            android:id="@+id/contenidoMarca"
+                            android:gravity="bottom"
+                            android:weightSum="1">
+
+                                <ListView
+                                    android:layout_width="fill_parent"
+                                    android:layout_height="match_parent"
+                                    android:id="@+id/listaDeMarcas"
+                                    android:background="#ffffff"
+                                    android:foregroundGravity="top|left|bottom|right" />
+
+                        </LinearLayout>
+
+
+                </LinearLayout>
+
+
 </RelativeLayout>
