--- a/app/src/main/res/layout/activity_nueva_marca.xml
+++ b/app/src/main/res/layout/activity_nueva_marca.xml
@@ -1,40 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@mipmap/fondoactividades"
-    tools:context=".vista.EditarBorrar">
+    tools:context=".vista.nuevaMarca">
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/nombretxt"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:id="@+id/nuevamarcatxt"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:text="Nombretxt" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Guardar"
-        android:id="@+id/guardarbtn"
-        android:layout_below="@+id/nombretxt"
+        android:text="guardar"
+        android:id="@+id/guardar"
+        android:layout_below="@+id/nuevamarcatxt"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="38dp"
+        android:layout_marginStart="38dp"
+        android:background="@drawable/bk_boton_plano"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Eliminar"
-        android:id="@+id/eliminarbtn"
-        android:layout_below="@+id/nombretxt"
-        android:layout_alignRight="@+id/nombretxt"
-        android:layout_alignEnd="@+id/nombretxt" />
+        android:text="cancelar"
+        android:id="@+id/cancelar"
+        android:layout_below="@+id/nuevamarcatxt"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="50dp"
+        android:layout_marginEnd="50dp"
+        android:background="@drawable/bk_boton_plano"/>
 </RelativeLayout>
